--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nabil.ahmed.pharmacy">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.UserSearchActivity"></activity>
+        <activity android:name=".Activities.ViewPharmacyActivity"></activity>
+        <activity android:name=".Activities.UserSearchActivity" />
         <activity android:name=".Activities.StartActivity" />
         <activity android:name=".Activities.NewDrugActivity" />
         <activity android:name=".Activities.Setup_SettingsActivity" />
