--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Activities.ViewPharmacyActivity"></activity>
-        <activity android:name=".Activities.UserSearchActivity" />
+        <activity android:name=".Activities.UserSearchActivity"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
         <activity android:name=".Activities.StartActivity" />
         <activity android:name=".Activities.NewDrugActivity" />
         <activity android:name=".Activities.Setup_SettingsActivity" />
