--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.6'
 
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.pnikosis:materialish-progress:1.7'
+    implementation 'com.android.support:support-annotations:28.0.0'
 }
